# ByteRacers

./: .gitignore  .gitmodules  BYTE_RACERS_RULES.md  CMakeLists-for-remote-deployment.txt  CMakeLists.txt  CMakeLists.txtold  Camera.h  CmakeLists.txt  CmakeLists.txtForIsoDev  EnemyCar.cpp  EnemyCar.h  Game.cpp  Game.h  Map.cpp  Map.h  Player.cpp  Player.h  PlayerCar.cpp  PlayerCar.h  README.md  build.sh  main.cpp
docs/: ByteRacers Project Timeline.xlsx  Project 2 Schedule .xlsx
levels/: level1.txt  levels_camera_test.txt
